<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/list_padding"
    android:gravity="center_horizontal">
    <LinearLayout
        android:layout_width="@dimen/menu_main_button_size"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_height="@dimen/menu_main_button_size"
            android:layout_width="match_parent"
            android:textSize="@dimen/menu_button_text_size_small"
            android:id="@+id/btn_menu_singer"
            android:drawableTop="@mipmap/ic_menu_singer_w"
            android:text="@string/menu_singer" />
        <Button
            android:layout_height="@dimen/menu_main_button_size"
            android:layout_width="match_parent"
        android:textSize="@dimen/menu_button_text_size_small"
        android:id="@+id/btn_menu_chorus"
        android:drawableTop="@mipmap/ic_menu_chorus_w"
        android:text="@string/menu_chorus"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/menu_main_button_size"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_height="@dimen/menu_main_button_size"
            android:layout_width="match_parent"
            android:textSize="@dimen/menu_button_text_size_small"
            android:id="@+id/btn_menu_lang"
            android:drawableTop="@mipmap/ic_menu_lang_w"
            android:text="@string/menu_lang"
            />
        <Button
            android:layout_height="@dimen/menu_main_button_size"
            android:layout_width="match_parent"
            android:textSize="@dimen/menu_button_text_size_small"
            android:id="@+id/btn_menu_billboard"
            android:drawableTop="@mipmap/ic_menu_billboard_w"
            android:text="@string/menu_billboard"
            />
        <Button
            android:layout_height="@dimen/menu_main_button_size"
            android:layout_width="match_parent"
            android:textSize="@dimen/menu_button_text_size_small"
            android:id="@+id/btn_menu_favorite"
            android:drawableTop="@mipmap/ic_menu_favorite_w"
            android:text="@string/menu_favorite"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/menu_main_button_size"
        android:layout_height="wrap_content"
        android:orientation="vertical">]
        <Button
            android:layout_height="@dimen/menu_main_button_size"
            android:layout_width="match_parent"
            android:textSize="@dimen/menu_button_text_size_small"
            android:id="@+id/btn_menu_search"
            android:drawableTop="@mipmap/ic_menu_search_w"
            android:text="@string/menu_search"
            />
        <Button
            android:layout_height="@dimen/menu_main_button_size"
            android:layout_width="match_parent"
            android:textSize="@dimen/menu_button_text_size_small"
            android:id="@+id/btn_menu_new"
            android:drawableTop="@mipmap/ic_menu_new_w"
            android:text="@string/menu_new"
            />
    </LinearLayout>
</LinearLayout>